--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,6 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.12.01"
-jetbrainsKotlinJvm = "2.0.0"
 retrofit = "2.11.0"
 kotlinx-coroutines = "1.9.0"
 kotlin-serialization-json = "1.7.1"
@@ -21,6 +20,11 @@ androidx-lifecycle = "2.8.7"
 ksp = "2.0.21-1.0.27"
 dagger = "2.53.1"
 javax-inject = "1"
+androidx-compose-runtime = "1.7.6"
+androidx-compose-kotlin-compiler-ext = "1.5.10"
+okhttp ="4.12.0"
+retrofitConverterKotlinxSerialization = "1.0.0"
+
 
 
 [libraries]
@@ -54,6 +58,9 @@ dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref =
 dagger-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
 dagger-main = { module = "com.google.dagger:dagger", version.ref = "dagger" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "androidx-compose-runtime" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+retrofit-converter-kotlinx-serialization = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofitConverterKotlinxSerialization" }
 
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javax-inject" }
 
