--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ ksp = "2.0.21-1.0.27"
 dagger = "2.54"
 javax-inject = "1"
 okhttp ="4.12.0"
+coil ="2.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,8 +69,8 @@ dagger-main = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-
-# На стриме использовал Jakarta Inject, но оно не будет работать с Dagger. Надо использовать JavaX Inject
+coil-core = { module = "io.coil-kt:coil", version.ref = "coil" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javax-inject" }
 
 [plugins]
