--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,8 @@ room = "2.6.1"
 ksp = "2.0.21-1.0.27"
 dagger = "2.54"
 javax-inject = "1"
-okhttp ="4.12.0"
-coil ="2.6.0"
+okhttp = "4.12.0"
+coil = "2.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -56,9 +56,9 @@ retrofit-adapters-result = { module = "com.github.skydoves:retrofit-adapters-res
 retrofit-converter-kotlinx-serialization = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofitConverterKotlinxSerialization" }
 
 koltinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
-koltinx-coroutines-android  = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+koltinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 
-koltinx-serialization-json  = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization-json" }
+koltinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization-json" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
@@ -72,6 +72,8 @@ okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-intercepto
 coil-core = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javax-inject" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.5" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
